<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:background="@color/colorPrimaryLight">
    <EditText
            android:layout_width="match_parent"
            android:layout_height="123dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etResult" android:layout_marginLeft="20dp" android:layout_marginTop="20dp"
            android:layout_marginRight="20dp" android:importantForAutofill="no" android:textAlignment="textEnd"
            android:textSize="24sp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="20dp"
            android:layout_marginRight="20dp">
        <Button
                android:text="@string/clear_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button" android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark" android:textColor="#FFFFFF"
                tools:ignore="ButtonStyle"/>
        <Button
                android:text="@string/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button2" android:layout_weight="1"
                android:textColor="#FFFFFF" android:backgroundTint="@color/colorPrimaryDark"
                tools:ignore="ButtonStyle"/>
        <Button
                android:text="@string/del"
                tools:ignore="ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn13" android:layout_weight="1"
                android:textColor="#FFFFFF" android:backgroundTint="@color/colorPrimaryDark"/>
        <Button
                android:text="@string/divide"
                tools:ignore="ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button4" android:layout_weight="1"
                android:textColor="#FFFFFF" android:backgroundTint="@color/colorPrimaryDark"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="20dp"
            android:layout_marginRight="20dp">
        <Button
                android:text="@string/_7"
                tools:ignore="ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button5" android:layout_weight="1"
                android:textColor="#FFFFFF" android:backgroundTint="@color/colorPrimaryDark"/>
        <Button
                android:text="@string/_8"
                tools:ignore="ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button6" android:layout_weight="1"
                android:textColor="#FFFFFF" android:backgroundTint="@color/colorPrimaryDark"/>
        <Button
                android:text="@string/_9"
                tools:ignore="ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button7" android:layout_weight="1"
                android:textColor="#FFFFFF" android:backgroundTint="@color/colorPrimaryDark"/>
        <Button
                android:text="@string/multiply"
                tools:ignore="ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button8" android:layout_weight="1"
                android:textColor="#FFFFFF" android:backgroundTint="@color/colorPrimaryDark"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="20dp"
            android:layout_marginRight="20dp">
        <Button
                android:text="@string/_4"
                tools:ignore="ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button11" android:layout_weight="1"
                android:textColor="#FFFFFF" android:backgroundTint="@color/colorPrimaryDark"/>
        <Button
                android:text="@string/_5"
                tools:ignore="ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button12" android:layout_weight="1"
                android:textColor="#FFFFFF" android:backgroundTint="@color/colorPrimaryDark"/>
        <Button
                android:text="@string/_6"
                tools:ignore="ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button14" android:layout_weight="1"
                android:textColor="#FFFFFF" android:backgroundTint="@color/colorPrimaryDark"/>
        <Button
                android:text="@string/minus"
                tools:ignore="ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button13" android:layout_weight="1"
                android:textColor="#FFFFFF" android:backgroundTint="@color/colorPrimaryDark"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="20dp" android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
        <Button
                android:text="@string/_1"
                tools:ignore="ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button15" android:layout_weight="1"
                android:textColor="#FFFFFF" android:backgroundTint="@color/colorPrimaryDark"/>
        <Button
                android:text="@string/_2"
                tools:ignore="ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button16" android:layout_weight="1"
                android:textColor="#FFFFFF" android:backgroundTint="@color/colorPrimaryDark"/>
        <Button
                android:text="@string/_3"
                tools:ignore="ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button17" android:layout_weight="1"
                android:textColor="#FFFFFF" android:backgroundTint="@color/colorPrimaryDark"/>
        <Button
                android:text="@string/plus"
                tools:ignore="ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button18" android:layout_weight="1"
                android:textColor="#FFFFFF" android:backgroundTint="@color/colorPrimaryDark"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="20dp" android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
        <Button
                android:text="@string/negative"
                tools:ignore="ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button19" android:layout_weight="1"
                android:textColor="#FFFFFF" android:backgroundTint="@color/colorPrimaryDark"/>
        <Button
                android:text="@string/_0"
                tools:ignore="ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button20" android:layout_weight="1"
                android:textColor="#FFFFFF" android:backgroundTint="@color/colorPrimaryDark"/>
        <Button
                android:text="@string/decimal"
                tools:ignore="ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button21" android:layout_weight="1"
                android:textColor="#FFFFFF" android:backgroundTint="@color/colorPrimaryDark"/>
        <Button
                android:text="@string/equals"
                tools:ignore="ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button22" android:layout_weight="1"
                android:textColor="#FFFFFF" android:backgroundTint="@color/colorPrimaryDark"/>
    </LinearLayout>
</LinearLayout>